--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </header>
 
         <picture data-aos="zoom-in">
-          <source
+          <!-- <source
             type="image/webp"
             srcset="
               ../assets/images/banner.webp    1x,
@@ -75,7 +75,7 @@
               ../assets/images/banner.png    1x,
               ../assets/images/banner@2x.png 2x
             "
-          />
+          /> -->
           <img class="hero__image" src="./assets/images/banner@2x.png" alt="" />
         </picture>
       </div>
@@ -205,7 +205,7 @@
           </p>
           <a class="link-arrow" href="#">Learn more</a>
         </div>
-        <picture data-aos="zoom-in-left">
+        <!-- <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
             srcset="
@@ -219,7 +219,7 @@
               ../assets/images/easy.jpg    1x,
               ../assets/images/easy@2x.jpg 2x
             "
-          />
+          /> -->
           <img
             class="feature__image"
             src="./assets/images/easy@2x.jpg"
@@ -244,7 +244,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-          <source
+          <!-- <source
             type="image/webp"
             srcset="
               ../assets/images/fast.webp    1x,
@@ -257,7 +257,7 @@
               ../assets/images/fast.jpg    1x,
               ../assets/images/fast@2x.jpg 2x
             "
-          />
+          /> -->
           <img
             class="feature__image"
             src="./assets/images/fast@2x.jpg"
@@ -282,7 +282,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-          <source
+          <!-- <source
             type="image/webp"
             srcset="
               ../assets/images/wordpress.webp    1x,
@@ -295,7 +295,7 @@
               ../assets/images/wordpress.jpg    1x,
               ../assets/images/wordpress@2x.jpg 2x
             "
-          />
+          /> -->
           <img
             class="feature__image"
             src="./assets/images/wordpress@2x.jpg"
@@ -320,7 +320,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-          <source
+          <!-- <source
             type="image/webp"
             srcset="
               ../assets/images/support.webp    1x,
@@ -333,7 +333,7 @@
               ../assets/images/support.jpg    1x,
               ../assets/images/support@2x.jpg 2x
             "
-          />
+          /> -->
           <img
             class="feature__image"
             src="./assets/images/support@2x.jpg"
@@ -349,7 +349,7 @@
       </header>
       <div class="container grid grid--cols-2">
         <picture data-aos="fade-right" class="block-showcase__image">
-          <source
+          <!-- <source
             type="image/webp"
             srcset="
               ../assets/images/ipad.webp    1x,
@@ -362,7 +362,7 @@
               ../assets/images/ipad.png    1x,
               ../assets/images/ipad@2x.png 2x
             "
-          />
+          /> -->
           <img src="./assets/images/ipad@2x.png" alt="" />
         </picture>
 
