--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
         </header>
 
         <picture data-aos="zoom-in">
-<<<<<<< HEAD
           <!-- <source
-=======
-          <source
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
             type="image/webp"
             srcset="
               ../assets/images/banner.webp    1x,
@@ -79,11 +75,7 @@
               ../assets/images/banner.png    1x,
               ../assets/images/banner@2x.png 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img class="hero__image" src="./assets/images/banner@2x.png" alt="" />
         </picture>
       </div>
@@ -213,12 +205,8 @@
           </p>
           <a class="link-arrow" href="#">Learn more</a>
         </div>
-<<<<<<< HEAD
-        <!-- <picture data-aos="zoom-in-left">
-=======
         <picture data-aos="zoom-in-left">
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
-          <source
+          <!-- <source 
             type="image/webp"
             srcset="
               ../assets/images/easy.webp    1x,
@@ -231,11 +219,7 @@
               ../assets/images/easy.jpg    1x,
               ../assets/images/easy@2x.jpg 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img
             class="feature__image"
             src="./assets/images/easy@2x.jpg"
@@ -260,11 +244,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-<<<<<<< HEAD
           <!-- <source
-=======
-          <source
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
             type="image/webp"
             srcset="
               ../assets/images/fast.webp    1x,
@@ -277,11 +257,7 @@
               ../assets/images/fast.jpg    1x,
               ../assets/images/fast@2x.jpg 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img
             class="feature__image"
             src="./assets/images/fast@2x.jpg"
@@ -306,11 +282,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-<<<<<<< HEAD
           <!-- <source
-=======
-          <source
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
             type="image/webp"
             srcset="
               ../assets/images/wordpress.webp    1x,
@@ -323,11 +295,7 @@
               ../assets/images/wordpress.jpg    1x,
               ../assets/images/wordpress@2x.jpg 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img
             class="feature__image"
             src="./assets/images/wordpress@2x.jpg"
@@ -352,11 +320,7 @@
           <a class="link-arrow" href="#">Learn more</a>
         </div>
         <picture>
-<<<<<<< HEAD
           <!-- <source
-=======
-          <source
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
             type="image/webp"
             srcset="
               ../assets/images/support.webp    1x,
@@ -369,11 +333,7 @@
               ../assets/images/support.jpg    1x,
               ../assets/images/support@2x.jpg 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img
             class="feature__image"
             src="./assets/images/support@2x.jpg"
@@ -389,11 +349,7 @@
       </header>
       <div class="container grid grid--cols-2">
         <picture data-aos="fade-right" class="block-showcase__image">
-<<<<<<< HEAD
           <!-- <source
-=======
-          <source
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
             type="image/webp"
             srcset="
               ../assets/images/ipad.webp    1x,
@@ -406,11 +362,7 @@
               ../assets/images/ipad.png    1x,
               ../assets/images/ipad@2x.png 2x
             "
-<<<<<<< HEAD
           /> -->
-=======
-          />
->>>>>>> 862e273b1e93c781af8036d3b536b7eeea4673cb
           <img src="./assets/images/ipad@2x.png" alt="" />
         </picture>
 
