--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="../assets/images/icons/search.svg"></use>
+            <use xlink:href="./assets/images/icons/search.svg"></use>
           </svg>
           Search
         </button>
