--- a/index.html
+++ b/index.html
@@ -449,9 +449,14 @@
 
             <blockquote class="quote">
               <p class="quote__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                suscipit commodi odio repellendus magni eos, ab nobis
-                necessitatibus incidunt. Tempora?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae, laboriosam. Vel quia itaque, obcaecati enim, officia
+                numquam harum asperiores tenetur sint non reprehenderit dolor.
+                Excepturi laboriosam, beatae error earum, in eius vel assumenda,
+                tenetur rerum dolorem nemo architecto itaque quae exercitationem
+                nobis laborum quis deserunt ipsum! Saepe similique soluta labore
+                eum voluptatem sequi magni repellendus quis! Nihil dignissimos
+                id ducimus.
               </p>
 
               <footer>
