--- a/index.html
+++ b/index.html
@@ -562,7 +562,9 @@
 
         <div class="footer__company">
           <img src="./assets/images/logo.svg" alt="" />
-          <p class="footer__copyright">Copyright 2023 Silviu Merfu</p>
+          <p class="footer__copyright">
+            Copyright &copy; 2023 by Moshify, Inc. All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
