--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 
     <title>Moshify</title>
 
+    <link rel="icon" href="./assets/images/favicon/favicon-sm.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./assets/images/favicon/favicon-md.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/images/favicon/favicon-lg.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -98,7 +110,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="./assets/images/icons/search.svg"></use>
+            <use xlink:href="../assets/images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
