--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://" />
     <meta property="og:url" content="https://moshfied.com" />
 
-    <title>Moshify</title>
+    <title>Moshify &mdash; Go Online for Just $9</title>
 
     <link rel="icon" href="./assets/images/favicon/favicon-sm.png" />
     <link
